# diffusion-policy-experiments

./: .gitignore  .secrets.template  ACCELERATION_RESULTS.md  EXPERIMENT_PLAN_long_context.md  INFERENCE_OPTIMIZATION.md  README.md  benchmark_comprehensive.py  benchmark_inference.py  csail_to_desktop.sh  csail_to_desktop_copy.sh  desktop_to_csail.sh  desktop_to_csail1.sh  desktop_to_csail2.sh  desktop_to_supercloud.sh  policy_inference.py  prune_idle.py  pyproject.toml  requirements.txt  run_training_local.sh  submit_training.sh  submit_training_cluster.sbatch  submit_training_csail.sbatch  submit_training_csail.sh  submit_training_csail_temp_copy.sbatch  submit_training_csail_temp_copy2.sbatch  submit_training_csail_temp_copy3.sbatch  submit_training_csail_temp_copy4.sbatch  submit_training_csail_temp_copy5.sbatch  submit_training_csail_temp_copy6.sbatch  submit_training_csail_temp_copy7.sbatch  supercloud_to_desktop.sh  train.py  visualize_dataset.py
config/franka_kitchen/: 12_obs_human_expert_attention_double_enc.yaml  16_obs_human_expert_attention_double_enc.yaml  20_obs_human_expert_attention_double_enc.yaml  2_obs_human_expert.yaml  2_obs_human_expert_attention_double_enc.yaml  2_obs_markovian_expert.yaml  3_obs_human_expert_attention_double_enc.yaml  4_obs_human_expert_attention_double_enc.yaml  5_obs_human_expert_attention_double_enc.yaml  6_obs_human_expert_attention_double_enc.yaml  8_obs_human_expert_attention_double_enc.yaml
scripts/: eval_sampler_quality.py  install_tensorrt.sh  test_tensorrt_backbone.py  test_torchao_quant.py
(+342 files in other folders)
