[tool.poetry]
name = "diffusion-policy"
version = "0.1.0"
description = "diffusion policy experiments"
authors = ["Michael Zeng <michzeng@mit.edu>"]
readme = "README.md"
packages = [{include = "diffusion_policy"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = "2.7.1"
torchvision = "0.22.1"
numpy = "1.23.3"
scipy = "1.9.1"
cffi = "1.15.1"
ipykernel = "6.16"
matplotlib = "3.6.1"
zarr = "2.12.0"
numcodecs = "0.10.2"
h5py = "3.7.0"
hydra-core = "1.2.0"
einops = "0.4.1"
tqdm = "4.64.1"
dill = "0.3.5.1"
opencv-python = "^4.5.0"
scikit-video = "1.1.11"
scikit-image = "0.19.3"
pymunk = "6.2.1"
wandb = "0.13.3"
threadpoolctl = "3.1.0"
shapely = "1.8.4"
cython = "0.29.32"
imageio = "2.22.0"
imageio-ffmpeg = "0.4.7"
termcolor = "2.0.1"
psutil = "5.9.2"
boto3 = "1.24.96"
accelerate = "0.13.2"
datasets = "2.6.1"
diffusers = "0.11.1"
huggingface-hub = "0.25.2"
numba = "0.60.0"
av = "10.0.0"
pygame = "2.1.2"
robomimic = "0.3.0"
pytorchvideo = "0.1.5"
r3m = {url = "https://github.com/facebookresearch/r3m/archive/b2334e726887fa0206962d7984c69c5fb09cceab.tar.gz"}
dm-control = "1.0.9"
drake = "^1.0.0"
dask = "2024.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "diffusion_policy.train:main"
